# bandcamp-collection-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
bandcamp_collection_downloader/: bandcamp.py  cache.py  cli.py  cookies.py  filenames.py  http_client.py
tests/: test_bandcamp.py  test_cache.py  test_cookies.py  test_http_client.py
